webadmin,userportal: gwt-maven-plugin POM cleanup
This patch eliminates some duplicities in WebAdmin and UserPortal
POM files and adds new feature with regard to 'gwtdev' profile.

1. Common properties used with GWT compilation moved to parent
   POM's <properties>

2. Common gwt-maven-plugin plugin configuration moved to parent
   POM's <pluginManagement>

3. 'all-langs' profile definition moved to parent POM's <profiles>

4. Activating 'gwtdev' profile when compiling GWT application
   (not debugging) will produce 'DETAILED' JavaScript output
   and enable draft compile (should be faster)

Item 4. makes it a bit easy to analyze/profile GWT application
during development.

Change-Id: I1d064980ac3269373b1c17040bcc1b5cd704445f
Signed-off-by: Vojtech Szocs <vszocs@redhat.com>