@@ -37,6 +37,18 @@
     <!-- Using older maven-processor-plugin version for Maven 2 compatibility -->
     <maven-processor-plugin.version>1.3.7</maven-processor-plugin.version>
     <maven-checkstyle-plugin.version>2.8</maven-checkstyle-plugin.version>
+    <!-- Activate load time weaving of aspects via AspectJ JVM agent -->
+    <aspectj.agent>-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar</aspectj.agent>
+    <!-- Regular expression that matches types that GWT compiler shouldn't prune (avoid dead code optimization) -->
+    <gwt.dontPrune>-Dgwt.dontPrune=org\.ovirt\.engine\.core\.(common|compat)\..*</gwt.dontPrune>
+    <!-- This can be overridden by setting this property in your personal settings.xml -->
+    <gwt-plugin.extraJvmArgs>${aspectj.agent} -Xms1024M -Xmx2048M -XX:PermSize=256M -XX:MaxPermSize=256M ${gwt.dontPrune}</gwt-plugin.extraJvmArgs>
+    <!-- Control target browsers for GWT compilation, maps to 'user.agent' deferred binding property in *.gwt.xml -->
+    <!-- By default, all browsers are supported, see [gwt-user.jar:com/google/gwt/user/UserAgent.gwt.xml] for a complete list -->
+    <gwt.userAgent>ie6,ie8,ie9,gecko1_8,safari,opera</gwt.userAgent>
+    <!-- Control target locales for GWT compilation, maps to 'locale' deferred binding property in *.gwt.xml -->
+    <!-- By default, only default (English) locale is supported, see 'all-langs' profile for a complete list -->
+    <gwt.locale>default</gwt.locale>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -104,7 +116,60 @@
             </filesets>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>gwt-maven-plugin</artifactId>
+          <dependencies>
+            <dependency>
+              <groupId>com.google.gwt</groupId>
+              <artifactId>gwt-user</artifactId>
+              <version>${gwt.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>com.google.gwt</groupId>
+              <artifactId>gwt-dev</artifactId>
+              <version>${gwt.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>com.google.gwt</groupId>
+              <artifactId>gwt-servlet</artifactId>
+              <version>${gwt.version}</version>
+            </dependency>
+            <!-- Add gwt-extension aspects to GWT compiler classpath -->
+            <dependency>
+              <groupId>${engine.groupId}</groupId>
+              <artifactId>gwt-extension</artifactId>
+              <version>${engine.version}</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <logLevel>INFO</logLevel>
+            <style>OBF</style>
+            <port>8700</port>
+            <noServer>true</noServer>
+            <bindAddress>0.0.0.0</bindAddress>
+            <gen>${gwtGenDirectory}</gen>
+            <extraJvmArgs>${gwt-plugin.extraJvmArgs}</extraJvmArgs>
+            <copyWebapp>true</copyWebapp>
+            <compileSourcesArtifacts>
+              <compileSourcesArtifact>${engine.groupId}:gwt-extension</compileSourcesArtifact>
+              <compileSourcesArtifact>${engine.groupId}:uicommonweb</compileSourcesArtifact>
+            </compileSourcesArtifacts>
+            <!--Why asm is excluded? -->
+            <runClasspathExcludes>
+              <runClasspathExclude>asm-3.3.jar</runClasspathExclude>
+            </runClasspathExcludes>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
+  <profiles>
+    <profile>
+      <id>all-langs</id>
+      <properties>
+        <gwt.locale>default,es,fr,ja,pt_BR,zh_CN</gwt.locale>
+      </properties>
+    </profile>
+  </profiles>
 </project>
